tests/ui/closures/issue-5239-1.rs
// Regression test for issue #5239

fn main() {
    let x = |ref x: isize| { x += 1; };
    //~^ ERROR E0368
}
